# libinstruments

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: libinstruments.yml
Prj/: libinstruments.lua
include/instruments/: device_connection.h  dtx_channel.h  dtx_connection.h  dtx_message.h  fps_service.h  instruments.h  performance_service.h  port_forwarder.h  process_service.h  tunnel_manager.h  types.h  wda_service.h  xctest_service.h
src/: instruments.cpp
src/connection/: device_connection.cpp  http2_framer.cpp  http2_framer.h  lwipopts.h  rsd_provider.cpp  rsd_provider.h  service_connector.cpp  service_connector.h  sys_arch.c  tunnel_manager.cpp  tunnel_quic.cpp  tunnel_quic.h  tunnel_userspace.cpp  tunnel_userspace.h  userspace_network.cpp  userspace_network.h  xpc_message.cpp  xpc_message.h
src/connection/arch/: cc.h
src/dtx/: dtx_channel.cpp  dtx_connection.cpp  dtx_fragment.cpp  dtx_fragment.h  dtx_message.cpp  dtx_primitive_dict.cpp  dtx_primitive_dict.h  dtx_transport.cpp  dtx_transport.h
src/nskeyedarchiver/: nskeyedarchiver.cpp  nskeyedarchiver.h  nskeyedunarchiver.cpp  nskeyedunarchiver.h  nsobject.cpp  nsobject.h
src/services/: fps_service.cpp  performance_service.cpp  port_forwarder.cpp  process_service.cpp  wda_service.cpp  xctest_proxy.cpp  xctest_proxy.h  xctest_service.cpp
src/util/: log.cpp  log.h  lz4.cpp  lz4.h
tool/: CMakeLists.txt  main.cpp
